feat:La cascadaa

--- a/Ejercicios-cascada/index5.html
+++ b/Ejercicios-cascada/index5.html
@@ -4,13 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./style2.css">
+  <link rel="stylesheet" href="./index5.html">
 </head>
 <body>
-  <!-- index.html -->
-
-<div class="main">
-  <div class="list" id="subsection">Blue text</div>
+<div id="parent">
+  <div class="child">HOLAA</div>
 </div>
 </body>
 </html>
