--- a/Ejercicios-cascada/index6.html
+++ b/Ejercicios-cascada/index6.html
@@ -4,13 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./style2.css">
+  <link rel="stylesheet" href="./style6.css">
 </head>
 <body>
-  <!-- index.html -->
-
-<div class="main">
-  <div class="list" id="subsection">Blue text</div>
-</div>
+  <p class="alert warning">hola</p>
 </body>
 </html>
